Fix content overflowing when it has to grow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -46,7 +46,7 @@ code {
 }
 
 .container {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
